frontend/public/css/main.css
* {
    font-family: Helvetica, sans-serif;
}
html, body {
    margin: 0;
    padding: 0;
    overflow: auto;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}
.link, #credits a {
    color: var(--link-color);
    text-decoration: none;
}
h1, h2, h3, h4, h5, h6 {
    margin: 0;
}

* {
    -webkit-tap-highlight-color: transparent;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

:root {
    --theme-5: #88D498;
    
    --color-light: #DCE0D9;
    
    --vh: 1vh;
    --vh-100: calc(var(--vh) * 100);
}
body, button, input {
    color: var(--text-color);
}
body {
    stroke: var(--text-color);
}

#app {
    position: relative;
    display: block;
    box-sizing: border-box;
}
#app_screen {
    padding-bottom: 60px;
}



#home {
    /*background-color: var(--color-dark);*/
    
    background: var(--theme-gradient);

}


#avg_screen {
    padding: 30px 0;

    width: 100%;
    /*height: 150px;*/
    display: block;
    /*background-color: rgba(232, 238, 243, 0.418);*/
    background: transparent;
    text-align: center;

    color: whitesmoke;

}
#avg_detail_cont {
    vertical-align: middle;
}
#avg_detail_cont svg {
    vertical-align: middle;
}
#avg_detail_cont i {
    vertical-align: bottom;
}
.section.avg svg {
    stroke: #8ED081;
}
.section.rank svg {
    stroke: #F2DC5D;
}
.section.rank i {
    color: #F2DC5D;
}
.section.avg {
    text-align: right;
}
.section.rank {
    text-align: left;
}
.section.rank a {
    color: inherit;
    text-decoration: none;
}

#ranks_container, #roundView_cont {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    margin: auto;
    vertical-align: middle;
    text-align: center;
    display: flex;
    align-items: center;
}
#roundView h2 {
    text-align: center;
}
#roundView input[type="number"] {
    font-size: inherit;
    margin: 0;
    border: none;
    padding: 3px;
    padding-bottom: 0;
    outline: none;
    background-color: transparent;
    border-bottom: 1px solid var(--text-color);
}
#roundView input[type="number"]:invalid {
    color: rgb(190, 0, 0);
}
#roundView .example {
    font-size: 30px;
    text-align: center;
}

#ranks, #roundView {
    width: 100%;
    box-sizing: border-box;
    margin: 30px;
    padding: 20px;
    height: max-content;
    text-align: left;
    display: inline-block;
    border-radius: 15px;
    background-color: var(--modal-color);
    box-shadow: var(--modal-shadow);
    position: relative;
}
#ranks .rank {

}
#ranks .left {
    border-right: 1px solid var(--divider-color);
}

#ranks .left span, #ranks .right span {
    display: block;
    padding: 1.5px 0;
}
#ranks .left, #ranks .right {
    display: inline-block;
    width: 50%;
    box-sizing: border-box;
    padding: 0 8px;
}
#ranks .left {
    text-align: right;
}
#ranks .right {
    text-align: left;
}

#ranks h2 {
    text-align: center;
    margin: 5px 0;
}
#ranks .close, #roundView .close {
    position: absolute;
    top: 0;
    right: 0;
    padding: 10px;
}

#avg_detail_cont .section {
    
    vertical-align: middle;
    display: inline-block;
    width: 40%;

}
#avg_detail_cont .left {
    padding-top: 3px;
}
#avg_detail_cont .right, #avg_detail_cont .left {
    display: inline-block;
    vertical-align: middle;
}

.divider {
    width: 0;
    height: 30px;
    display: inline-block;
    border: 0.5px solid #cfcfcf;
    content: '';
    vertical-align: middle;
    margin: 0 10px;
}

#avg_detail_cont .big, #avg_detail_cont .small {
    display: block;
    width: max-content;
    margin: 0;
}
#avg_detail_cont .big {
    font-size: 18px;
    font-weight: bold;
    color: whitesmoke;
    
}
#avg_detail_cont .small {
    font-size: 13px;
    color: #cccccc;
}

circle {
    transition: stroke-dashoffset 0.35s, stroke 0.35s;
    transform: rotate(-90deg);
    transform-origin: 50% 50%;
    /*stroke: #00cc66;*/

}
#circle_container {
    
    
    width: 120px;
    height: 120px;
    position: relative;
    display: inline-block;
}
#circle_container #total_avg, #circle_container #avg_circle {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    display: inline-block;
}
#total_avg_text {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    text-align: center;
    height: max-content;
    font-size: 30px;
}


#recent h1 .left, #recent h1 .right {
    display: inline-block;
    vertical-align: middle;
    width: 50%;
}
#recent h1 .right {
    text-align: right;
}
#recent h1 .right svg {
    vertical-align: middle;
    height: 29px;
}
#recent h1 {
    white-space: nowrap;
    text-align: left;
    font-weight: normal;
    
    color: var(--text-color);
    background-color: rgb(170, 255, 204);
    background: transparent;
    box-sizing: border-box;
    /*color: var(--color-light);*/
    
    /*border-top-left-radius: 0;
    border-top-right-radius: 0;*/
    
    margin-top: 0px;
    margin: 10px 15px;
    font-size: 25px;
    /*box-shadow: 0 3px 15px rgba(0, 0, 0, 0.15);*/
}
#recentsList {
    padding: 0 0;
    box-sizing: border-box;
}

.gradeLike .left, .gradeLike .right{
    display: inline-block;
    vertical-align: middle;
    white-space: initial;
}
.gradeLike .right {
    width: 80%;
    width: calc(calc(100% - 43px) - 80px);
}
.gradeLike .left {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    padding: 5px 10px;
    font-size: 28px;
    font-weight: bold;

}
[data-grade="5"] {
    color: #00cc66;
}
[data-grade="4"] {
    color: #009999;
}
[data-grade="3"] {
    color: #ffcc00;
}
[data-grade="2"] {
    color: #ff6600;
}
[data-grade="1"] {
    color: #b32400;
}
[data-grade="#"] {
    color: #669999;
}


.absence svg {
    stroke: #009999;
}
.absence.justified svg {
    stroke: #00af58;
}
/* ... */

